--- a/apps/favorite_book_app/static/css/style2.css
+++ b/apps/favorite_book_app/static/css/style2.css
@@ -12,7 +12,7 @@ h1{
 }
 form{
     display: inline-block;
-    width: 900px;
+    width:350px;
 }
 .log_form{
     height:30px;
@@ -20,7 +20,7 @@ form{
     box-shadow: 2px 5px;
     border-radius: 4px;
     border: 1px solid black;
-    margin:50px 200px;
+    margin:50px 100px;
     background-color: rgb(141, 226, 222);
     font-weight: bold;
     display: inline-block;
@@ -65,7 +65,7 @@ button{
     box-shadow: 2px 5px;
     border-radius: 4px;
     border: 1px solid black;
-    margin:75px 125px;
+    margin:75px 100px;
     background-color: rgb(141, 226, 222);
     font-weight: bold;
     display: inline-block;
@@ -73,6 +73,9 @@ button{
 .list{
     display: inline-block;
     margin-top: 50px;
+    margin-left:225px;
+    height: 450px;
+    overflow-y: auto;
 }
 ul{
     list-style-type: none;
